# Simulation-and-control-of-BLDC-motor-with-methods-on-data-transfer-and-visualization

./: README.md
Data-transfer-implementation/Arrow_WebRTC_test/: CMakeLists.txt  readMe
Data-transfer-implementation/Arrow_WebRTC_test/include/: arrow_answerer.h  arrow_offerer.h
Data-transfer-implementation/Arrow_WebRTC_test/src/: arrow_answerer.c  arrow_offerer.c  arrow_offerer1.c
Data-transfer-implementation/Arrow_buffer_create_display_test/: CMakeLists.txt  arrow_test.c  readme.md
Javascript-C-version/: CMakeLists.txt  Readme.md
Javascript-C-version/include/: FOC.h  PID.h  global_variables.h  model.h  motor.h  openloop.h
Javascript-C-version/javascript/: a.js  index.html  main.css  motor_update_sim.js  package-lock.json  package.json  server.js
Javascript-C-version/src/: FOC.c  PID.c  global_variables.c  main.c  model.c  motor.c  openloop.c
Multithreaded-software/: CMakeLists.txt  README.md
Multithreaded-software/coordination_libraries/fsm/: FSM_model.h
Multithreaded-software/coordination_libraries/lcsm/: lcsm_new.c  lcsm_new.h
Multithreaded-software/coordination_libraries/petrinet/: petrinet.c  petrinet.h
Multithreaded-software/deployment_architecture_model/include/: activities.h  activity_scheduler.h  algorithm.h  symbolic_schedule.h  threads.h
Multithreaded-software/deployment_architecture_model/src/: activities.c  activity_scheduler.c  algorithm.c  threads.c
Multithreaded-software/include/: flags.h
Multithreaded-software/include/activities/: application_mediator.h  command_line.h  motor_simulation_control.h
Multithreaded-software/include/activities/coordination/: application_mediator_petrinet.h
Multithreaded-software/include/activity_schedulers/: activity_scheduler1.h
Multithreaded-software/include/activity_schedulers/coordination/: thread_activity_scheduler_coordination_petrinet.h
Multithreaded-software/include/algorithms/: FOC.h  PID.h  global_variables.h  model.h  motor.h  motor_simulation_control_functions.h  openloop.h
Multithreaded-software/include/threads/: thread0.h  thread1.h
Multithreaded-software/include/threads/coordination/: thread_lcsm_coordination_petrinet.h
Multithreaded-software/src/: main_program.c
Multithreaded-software/src/activities/: application_mediator.c  command_line.c  motor_simulation_control.c
Multithreaded-software/src/activities/coordination/: application_mediator_petrinet.c
Multithreaded-software/src/activity_schedulers/: activity_scheduler1.c
Multithreaded-software/src/activity_schedulers/coordination/: thread_activity_scheduler_coordination_petrinet.c
Multithreaded-software/src/algorithms/: FOC.c  PID.c  global_variables.c  model.c  motor.c  motor_simulation_control_functions.c  openloop.c
Multithreaded-software/src/threads/: thread0.c  thread1.c
Multithreaded-software/src/threads/coordination/: thread_lcsm_coordination_petrinet.c
Multithreaded-software/utilities/logger/: logger_messages.c  logger_messages.h
Multithreaded-software/utilities/mtel_buffers/: mtel_buffers.h  mtel_freshness_streams.c  mtel_freshness_streams.h
Multithreaded-software/utilities/time/: time_helper.c  time_helper.h
